# jmap

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  TODO.md  rust-toolchain
.github/workflows/: audit.yml  ci.yml
examples/: simple.rs
src/: capabilities.rs  client.rs  lib.rs  session.rs
src/types/: common.rs  invocation.rs  mailbox.rs  mod.rs  request.rs  response.rs
src/types/mail/: mailbox.rs  mod.rs
src/types/methods/: changes.rs  get.rs  mod.rs
src/types/session/: account_capabilities.rs  capabilities.rs  mod.rs
