# cargo-features = ["strip"]

[package]
name = "jmap"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.43"
bytes = "1.0.1"
http = "0.2.4"
indexmap = { version = "1.7.0", features = ["serde"] }
log = "0.4.14"
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
tokio = { version = "1.11.0", features = ["full"] }
tokio-tungstenite = "0.15.0"
url = { version = "2.2.2", features = ["serde"] }

[dev-dependencies]
env_logger = "0.9.0"
clap = { version = "3.0.0-beta.4", features = ["termcolor", "wrap_help"] }

[profile.release]
lto = true
codegen-units = 1
# strip = true
# opt-level = "z"
# panic = "abort"
